@@ -1,6 +1,5 @@
 use warnings;
 use strict;
-no strict "subs";
 
 use Module::Build;
 
@@ -8,24 +7,24 @@ Module::Build->new(
 	module_name => "DateTime::TimeZone::Tzfile",
 	license => "perl",
 	build_requires => {
-		IO::File => "1.03",
-		Module::Build => 0,
-		Test::More => 0,
-		perl => "5.006",
-		strict => 0,
-		warnings => 0,
+		"IO::File" => "1.03",
+		"Module::Build" => 0,
+		"Test::More" => 0,
+		"perl" => "5.006",
+		"strict" => 0,
+		"warnings" => 0,
 	},
 	requires => {
-		Carp => 0,
-		DateTime::TimeZone::SystemV => "0.002",
-		IO::File => "1.03",
-		IO::Handle => "1.08",
-		constant => 0,
-		fields => 0,
-		integer => 0,
-		perl => "5.006",
-		strict => 0,
-		warnings => 0,
+		"Carp" => 0,
+		"DateTime::TimeZone::SystemV" => "0.002",
+		"IO::File" => "1.03",
+		"IO::Handle" => "1.08",
+		"constant" => 0,
+		"fields" => 0,
+		"integer" => 0,
+		"perl" => "5.006",
+		"strict" => 0,
+		"warnings" => 0,
 	},
 	dynamic_config => 0,
 	meta_add => { distribution_type => "module" },
